Fix mobile button too small.

--- a/src/components/live-site/live-site.styles.scss
+++ b/src/components/live-site/live-site.styles.scss
@@ -18,7 +18,7 @@
   box-shadow: 0 0 6px #adb5bd;
 
   &:hover {
-    box-shadow: 0 0 12px #adb5bd;
+    box-shadow: 0 0 1.2rem #adb5bd;
   }
 }
 
@@ -57,21 +57,22 @@
   align-items: center;
   display: flex;
   position: absolute;
-  margin-bottom: 8px;
-  bottom: 10px;
-  width: 25%;
-  height: 10%;
-  font-weight: bolder;
+  margin-bottom: 0.8rem;
+  bottom: 1rem;
+  width: 25vw;
+  height: calc(1rem + 3vw);
+  font-weight: bold;
   background-color: #364fc7;
   border: none;
   text-transform: uppercase;
+  font-style: italic;
   letter-spacing: 0.2rem;
 
   transition: opacity, box-shadow 1s ease;
   opacity: 0;
   border-radius: 24px;
-  box-shadow: 0 0 6px #adb5bd;
-  font-size: 1.4rem;
+  box-shadow: 0 0 0.6rem #adb5bd;
+  font-size: 1.2rem;
 }
 
 .image-container {
@@ -82,7 +83,7 @@
   width: 100%;
 
   border: none;
-  box-shadow: 0 0 2px #ced4da;
+  box-shadow: 0 0 0.2rem #ced4da;
   border-radius: 24px;
   overflow: hidden;
 
@@ -100,7 +101,7 @@ img {
   flex-direction: column;
   justify-content: space-evenly;
   align-content: center;
-  padding: 8px;
+  padding: 0.8rem;
   width: 80%;
   height: 100%;
   gap: 3vw;
